add produkt einkauf funktion, add getGekaufteProdukteByBenutzerId